--- a/async/product_catalog/index.html
+++ b/async/product_catalog/index.html
@@ -1,18 +1,18 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="library.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
   </head>
   <body>
     <h2>Search Product By ID</h2>
-    <form >
-      <input type="text" name="fname"><br>
-      <input type="submit" value="Submit">
-    </form>
+    <input type="text" name="fname" id="input"><br>
+    <button id="inputButton">Submit </button>
+    
     <h2>Examined Product</h2>
-    <p>Product ID: <span className="productID"></span></p>
-    <p>Price: <span className="price"></span></p>
-    <p>Type: <span className="type"></span></p>
+    <p>Product ID: <span class="productID"></span></p>
+    <p>Price: <span class="price"></span></p>
+    <p>Type: <span class="type"></span></p>
 
     <h2>List of Similar Products</h2>
     <table>
