product catalog complete

--- a/async/product_catalog/index.html
+++ b/async/product_catalog/index.html
@@ -8,14 +8,14 @@
     <h2>Search Product By ID</h2>
     <input type="text" name="fname" id="input"><br>
     <button id="inputButton">Submit </button>
-    
+
     <h2>Examined Product</h2>
     <p>Product ID: <span class="productID"></span></p>
     <p>Price: <span class="price"></span></p>
     <p>Type: <span class="type"></span></p>
 
     <h2>List of Similar Products</h2>
-    <table>
+    <table class="similarProdcutsTable">
       <tr>
         <th>ProductId</th>
         <th>Type</th>
